Fix alignment of blockquotes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -199,11 +199,16 @@ a {
   text-decoration: none;
 }
 
-.mdContent ol + blockquote,
+.mdContent ol + blockquote {
+  padding: 10px 20px;
+  margin: -10px 0 20px 30px !important;
+  font-size: 17.5px;
+  border-left: 5px solid #eee;
+}
+
 .mdContent blockquote,
 .policyContent blockquote {
   padding: 10px 20px;
-  margin: -10px 0 20px 30px !important;
   font-size: 17.5px;
   border-left: 5px solid #eee;
 }
